[package]
name = "lamb"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
description = "LastAudioMemoryBuffer rolling audio daemon"

[dependencies]
clap = { version = "4", features = ["derive"] }
jack = "0.13"
libc = "0.2"
pipewire = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
